<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="options">Настройки</string>
    <string name="media_library">Медиатека</string>
    <string name="night_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support_ask">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="clear_search_txt">cls</string>
    <string name="back_to_main_Screen">Back to main screen</string>
    <string name="thanks_msg_theme">Сообщение разработчикам и разработчицам приложения "Playlist Maker"</string>
    <string name="thanks_msg">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="connection_troubles">Проблемы со связью</string>
    <string name="loading_fail">\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="reload">Обновить</string>
    <string name="clear_history">Очистить историю</string>
    <string name="you_have_search">Вы искали</string>
    <string name="error_loading_activity">Не удалось запустить activity</string>


    <string name="android_developer_course" translatable="false">https://practicum.yandex.ru/android-developer/</string>
    <string name="android_yandex_offer" translatable="false"> https://yandex.ru/legal/practicum_offer/ </string>
    <string name="share_type" translatable="false"> text/plain </string>
    <string name="student_email_address" translatable="false">xqjh@mail.ru</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="song_year">Год</string>
    <string name="song_genre">Жанр</string>
    <string name="song_country">Страна</string>
    <string name="playing_time">00:00</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_media_storage">Ваша медиатека пуста</string>

    <string name="no_playlist_found">Вы не создали \n ни одного плейлиста</string>
    <string name="favouriteTracks">Избранные треки</string>
    <string name="Playlists">Плейлисты</string>

    <!-- New Playlist -->
    <string name="new_playlist_article">Новый плейлист</string>
    <string name="playlist_cover_img">ImageCover</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="playlist_button_create">Создать</string>
    <string name="playlist_button_check_folder">Check</string>

    <!-- fragment playlists -->
    <string name="Create_new_playlist">Новый плейлист</string>
    <string name="img_description_nothing_found">NothingFound</string>
    <string name="playlists_button_clearBd">CLBD</string>

    <!-- fragment playlistEditor -->
    <string name="empty_playlist">Плейлист пуст</string>

    <!-- Notification channel -->
    <string name="channel_name">PlayListMaker notifications</string>
    <string name="channel_description">Playing track name/string</string>

</resources>