<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/settings_layout_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivitySettings">

    <!-- Settings back to Menu-->
    <LinearLayout
        style="@style/settings_layout_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="14dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backToMainActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/options"
            android:src="@drawable/back_to_mainscreen"
            app:tint="?attr/colorOnPrimary" />

        <TextView
            style="@style/settings_text_back"
            android:text="@string/options" />
    </LinearLayout>

    <!-- Dark theme -->
    <LinearLayout style="@style/setting_minor_layout">

        <TextView
            style="@style/settings_minor_txt"
            android:text="@string/night_theme" />

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <!-- Share app -->
    <LinearLayout style="@style/setting_minor_layout">

        <TextView
            style="@style/settings_minor_txt"
            android:text="@string/share_app" />

        <ImageView
            style="@style/settings_img"
            android:contentDescription="@string/share_app"
            android:src="@drawable/share_app_ic" />

    </LinearLayout>

    <!-- Ask prof -->
    <LinearLayout style="@style/setting_minor_layout">

        <TextView
            style="@style/settings_minor_txt"
            android:text="@string/support_ask" />

        <ImageView
            style="@style/settings_img"
            android:contentDescription="@string/support_ask"
            android:src="@drawable/support_ask" />
    </LinearLayout>

    <!-- Agreement -->
    <LinearLayout style="@style/setting_minor_layout">

        <TextView
            style="@style/settings_minor_txt"
            android:text="@string/user_agreement" />

        <ImageView
            style="@style/settings_img"
            android:contentDescription="@string/user_agreement"
            android:src="@drawable/agreement" />

    </LinearLayout>

</LinearLayout>
