<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.activities.ActivityPlayer">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.06" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            style="@style/settings_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.94" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/center_guidline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <ImageView
            android:id="@+id/player_btn_back"
            style="@style/settings_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/back_to_main_Screen"
            android:src="@drawable/arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/player_art_work"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="82dp"
            android:layout_marginBottom="24dp"
            android:scaleType="centerCrop"
            android:src="@drawable/no_track_found"
            app:layout_constraintBottom_toTopOf="@id/player_track_name"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/player_track_name"
            style="@style/player_track_name"
            android:layout_marginBottom="12dp"
            android:text="@string/app_name"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toTopOf="@id/player_artist_name"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/left_guideline" />

        <TextView
            android:id="@+id/player_artist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="38dp"
            android:fontFamily="@font/ys_display_medium"
            android:singleLine="true"
            android:text="The Beatles"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/player_btn_play"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/left_guideline" />


        <ImageButton
            android:id="@+id/btn_add_to_playlist"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/player_btn_round"
            android:contentDescription="@string/Playlists"
            android:src="@drawable/plus_track"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toTopOf="@id/player_btn_play" />

        <ImageButton
            android:id="@+id/add_to_fav_btn"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/player_btn_round"
            android:contentDescription="@string/favouriteTracks"
            android:src="@drawable/like_track"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintTop_toTopOf="@id/player_btn_play" />

        <ImageButton
            android:id="@+id/player_btn_play"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_marginBottom="12dp"
            android:background="@null"
            android:contentDescription="@string/app_name"
            android:src="@drawable/play_track"
            app:layout_constraintBottom_toTopOf="@id/player_play_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <!--  current duration -->
        <TextView
            android:id="@+id/player_play_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/playing_time"
            app:layout_constraintBottom_toTopOf="@id/Player_txt_full_duration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!--  Full duration -->
        <TextView
            android:id="@+id/Player_txt_full_duration"
            style="@style/player_text_lbl"
            android:layout_marginBottom="16dp"
            android:text="@string/duration"
            app:layout_constraintBottom_toTopOf="@id/Player_txt_album"
            app:layout_constraintStart_toStartOf="@id/left_guideline" />

        <TextView
            android:id="@+id/Player_lbl_full_duration"
            style="@style/player_text_lbl"
            android:layout_marginBottom="16dp"
            android:text="@string/duration"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintBottom_toTopOf="@id/Player_lbl_album"
            app:layout_constraintEnd_toStartOf="@id/right_guideline" />


        <!--  album -->
        <TextView
            android:id="@+id/Player_txt_album"
            style="@style/player_text_lbl"
            android:layout_marginBottom="16dp"
            android:text="@string/album"
            app:layout_constraintBottom_toTopOf="@id/Player_txt_year"
            app:layout_constraintStart_toStartOf="@id/left_guideline" />

        <TextView
            android:id="@+id/Player_lbl_album"
            style="@style/player_text_lbl"
            android:layout_marginBottom="16dp"
            android:text="@string/album"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintBottom_toTopOf="@id/Player_lbl_year"
            app:layout_constraintEnd_toStartOf="@id/right_guideline" />


        <!--  year -->
        <TextView
            android:id="@+id/Player_txt_year"
            style="@style/player_text_lbl"
            android:layout_marginBottom="16dp"
            android:text="@string/song_year"
            app:layout_constraintBottom_toTopOf="@id/Player_txt_genre"
            app:layout_constraintStart_toStartOf="@id/left_guideline" />

        <TextView
            android:id="@+id/Player_lbl_year"
            style="@style/player_text_lbl"
            android:layout_marginBottom="16dp"
            android:text="@string/song_year"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintBottom_toTopOf="@id/Player_lbl_genre"
            app:layout_constraintEnd_toStartOf="@id/right_guideline" />


        <!--  genre -->
        <TextView
            android:id="@+id/Player_txt_genre"
            style="@style/player_text_lbl"
            android:layout_marginBottom="16dp"
            android:text="@string/song_genre"
            app:layout_constraintBottom_toTopOf="@id/Player_txt_country"
            app:layout_constraintStart_toStartOf="@id/left_guideline" />

        <TextView
            android:id="@+id/Player_lbl_genre"
            style="@style/player_text_lbl"
            android:layout_marginBottom="16dp"
            android:text="@string/song_genre"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintBottom_toTopOf="@id/Player_lbl_country"
            app:layout_constraintEnd_toStartOf="@id/right_guideline" />

        <!--  Country -->
        <TextView
            android:id="@+id/Player_txt_country"
            style="@style/player_text_lbl"
            android:layout_marginBottom="28dp"
            android:text="@string/song_country"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/left_guideline" />

        <TextView
            android:id="@+id/Player_lbl_country"
            style="@style/player_text_lbl"
            android:layout_marginBottom="28dp"
            android:text="@string/song_country"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/right_guideline" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/standard_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="560dp"
        android:orientation="vertical"
        app:behavior_hideable="true"
        android:background="?attr/colorPrimary"

        app:behavior_peekHeight="40dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@color/Yp_Light_Grey" />

        <TextView
            style="@style/settings_text_back"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"

            android:textSize="19sp"
            android:text="Добавить в плейлист" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_new_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="28dp"
            android:paddingHorizontal="@dimen/search_stub_btn_hor_pad"
            android:paddingVertical="6dp"
            android:text="@string/Create_new_playlist"
            android:fontFamily="@font/ys_display_medium"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="14sp"
            app:backgroundTint="?attr/colorOnPrimary"
            app:cornerRadius="54dp"/>

       <androidx.recyclerview.widget.RecyclerView
           android:id="@+id/playlists_recycler"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           tools:listitem="@layout/playlist_short_item"/>
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>